GraphRAG QUESTION AI THAI LANGUAGE

--- a/test.ipynb
+++ b/test.ipynb
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-21 01:00:42.737213\n"
+      "2025-05-21 23:24:00.861648\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,10 +81,10 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  31.28342914581299\n",
+      "Time taken to upload files:  61.717970848083496\n",
       "Status Code: 200\n",
-      "Response Headers: {'date': 'Tue, 20 May 2025 19:20:21 GMT', 'server': 'uvicorn', 'content-length': '86', 'content-type': 'application/json'}\n",
-      "Response Text (content): {\"status\":\"Success\",\"message\":\"Files processed successfully.\",\"service_response\":null}\n"
+      "Response Headers: {'date': 'Thu, 22 May 2025 03:39:08 GMT', 'server': 'uvicorn', 'content-length': '123', 'content-type': 'application/json'}\n",
+      "Response Text (content): {\"status\":\"Success\",\"message\":\"Files processed successfully and Question AI generation triggered.\",\"service_response\":null}\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "url = \"http://127.0.0.1:5050/api/v1/graph/uploadfile\" # สมมติว่าคุณใช้ port 5050 ตามที่ app/main.py กำหนด\n",
     "\n",
     "files = [\n",
-    "    ('files', ('Wanwisa Sakchaiyan__CL.pdf', open('./abc/Wanwisa Sakchaiyan__CL.pdf', 'rb'), 'application/pdf'))\n",
+    "    ('files', ('789_03 Property_SET ESG Metrics full (1).pdf', open('./pdf/789_03 Property_SET ESG Metrics full (1).pdf', 'rb'), 'application/pdf'))\n",
     "]\n",
     "print(\"Uploading files...\")\n",
     "start = time.time()\n",
@@ -117,14 +117,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [{'content': 'Who is wanwisa sakchaiyan?', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '9cc3c723-5c35-42f6-a4df-21957877a1ce', 'example': False}, {'content': 'Wanwisa Sakchaiyan is currently in her final semester of a Bachelor’s degree in Control System and Instrumentation Engineering (Automation Engineering International Program) at King Mongkut’s University of Technology Thonburi. She is passionate about the future of advanced technology and excited for the opportunity to begin her engineering career with an innovative global leader.', 'additional_kwargs': {}, 'response_metadata': {'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, 'type': 'ai', 'name': None, 'id': 'run--0632ef2f-1e01-4ef8-984c-f2f1d8f1d40b-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 17018, 'output_tokens': 67, 'total_tokens': 17085, 'input_token_details': {'cache_read': 0}}}]}\n"
+      "Cohere client initialized successfully.\n",
+      "\n",
+      "Attempting to get embeddings for 2 texts using model 'embed-v4.0'...\n",
+      "Sample texts: ['นี่คือข้อความทดสอบภาษาไทยสำหรับการสร้าง Embedding', 'Hello from your Cohere API test script!']\n",
+      "\n",
+      "Successfully retrieved 2 embeddings.\n",
+      "Dimension of the first embedding: 1536\n",
+      "\n",
+      "Cohere API test successful! Your API key and connection are working.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import cohere\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# โหลด Environment Variables จากไฟล์ .env (ถ้าคุณใช้)\n",
+    "load_dotenv()\n",
+    "\n",
+    "COHERE_API_KEY = os.getenv(\"COHERE_API_KEY\")\n",
+    "\n",
+    "if not COHERE_API_KEY:\n",
+    "    print(\"Error: ไม่พบ COHERE_API_KEY ใน Environment Variables\")\n",
+    "    exit()\n",
+    "\n",
+    "# Initialize Cohere client\n",
+    "try:\n",
+    "    # สำหรับ cohere SDK version ใหม่ๆ (ปกติจะใช้แบบนี้)\n",
+    "    co = cohere.Client(COHERE_API_KEY)\n",
+    "    # หมายเหตุ: ถ้าเป็น SDK version เก่ามากๆ อาจจะเป็น cohere.Client(api_key=COHERE_API_KEY)\n",
+    "    print(\"Cohere client initialized successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error initializing Cohere client: {e}\")\n",
+    "    exit()\n",
+    "\n",
+    "sample_texts = [\n",
+    "    \"นี่คือข้อความทดสอบภาษาไทยสำหรับการสร้าง Embedding\",\n",
+    "    \"Hello from your Cohere API test script!\"\n",
+    "]\n",
+    "# Model ที่คุณใช้ใน neo4j_service.py คือ 'embed-v4.0'\n",
+    "# หรือลองใช้ model อื่นที่รองรับหลายภาษา เช่น 'embed-multilingual-v3.0' เพื่อทดสอบ\n",
+    "# ตรวจสอบชื่อ Model ที่ถูกต้องจากเอกสารของ Cohere อีกครั้ง\n",
+    "model_name = os.getenv(\"COHERE_EMBEDDING_MODEL\", \"embed-v4.0\") # ดึงมาจาก Env หรือ Hardcode\n",
+    "\n",
+    "print(f\"\\nAttempting to get embeddings for {len(sample_texts)} texts using model '{model_name}'...\")\n",
+    "print(f\"Sample texts: {sample_texts}\")\n",
+    "\n",
+    "try:\n",
+    "    response = co.embed(\n",
+    "        texts=sample_texts,\n",
+    "        model=model_name,\n",
+    "        input_type=\"search_document\" # ประเภท Input สำหรับการค้นหาเอกสารทั่วไป\n",
+    "                                     # อาจจะเป็น \"search_query\", \"classification\", \"clustering\" ขึ้นอยู่กับการใช้งาน\n",
+    "    )\n",
+    "    embeddings = response.embeddings\n",
+    "    print(f\"\\nSuccessfully retrieved {len(embeddings)} embeddings.\")\n",
+    "    if embeddings:\n",
+    "        print(f\"Dimension of the first embedding: {len(embeddings[0])}\")\n",
+    "        # print(\"First 5 dimensions of the first embedding:\", embeddings[0][:5])\n",
+    "    print(\"\\nCohere API test successful! Your API key and connection are working.\")\n",
+    "\n",
+    "except cohere.CohereAPIError as e:\n",
+    "    print(f\"\\nCohere API Error occurred:\")\n",
+    "    print(f\"  Error Type: {type(e).__name__}\")\n",
+    "    print(f\"  Message: {e.message if hasattr(e, 'message') else str(e)}\")\n",
+    "    if hasattr(e, 'http_status'):\n",
+    "        print(f\"  HTTP Status Code: {e.http_status}\")\n",
+    "    if hasattr(e, 'headers'):\n",
+    "        print(f\"  Headers: {e.headers}\")\n",
+    "    # บางครั้ง error details อาจจะอยู่ใน e.body หรือ e.response\n",
+    "    # print(f\"  Body: {e.body if hasattr(e, 'body') else 'N/A'}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"\\nAn unexpected error occurred: {type(e).__name__} - {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'messages': [{'content': \"Describe your factory's quantitative and qualitative targets for greenhouse gas (GHG) emission reductions. Detail the specific strategies and initiatives implemented in the past year, including investments in renewable energy, energy efficiency upgrades, or carbon offsetting programs, and report on the measured reductions achieved.\", 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '65cd3357-becf-4c6a-93dc-c9f477a47d9b', 'example': False}, {'content': \"I am sorry, but this document does not contain specific details about a factory's quantitative and qualitative targets for greenhouse gas (GHG) emission reductions, the specific strategies and initiatives implemented in the past year, including investments in renewable energy, energy efficiency upgrades, or carbon offsetting programs, and the measured reductions achieved.\", 'additional_kwargs': {}, 'response_metadata': {'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, 'type': 'ai', 'name': None, 'id': 'run--d86bd1ea-9faa-452f-b965-1ac2f67d73ea-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 15662, 'output_tokens': 64, 'total_tokens': 15726, 'input_token_details': {'cache_read': 0}}}]}\n"
      ]
     }
    ],
@@ -136,26 +222,7 @@
     "\n",
     "# List of ESG questions\n",
     "esg_questions = [\n",
-    "    \"Who is wanwisa sakchaiyan?\",\n",
-    "    # \"What are your company’s long-term environmental goals?\",\n",
-    "    # \"How do you ensure sustainable sourcing for raw materials?\",\n",
-    "    # \"What policies does your company have to reduce waste production?\",\n",
-    "    # \"How are you minimizing water usage across your operations?\",\n",
-    "    # \"What diversity and inclusion initiatives are currently in place?\",\n",
-    "    # \"How does the organization support community development and social causes?\",\n",
-    "    # \"What steps does your company take to ensure fair labor practices?\",\n",
-    "    # \"How do you engage with employees to maintain high workplace satisfaction?\",\n",
-    "    # \"What are your policies on health and safety for employees?\",\n",
-    "    # \"What practices does your company have to maintain transparent corporate governance?\",\n",
-    "    # \"How does the board ensure compliance with ethical standards?\",\n",
-    "    # \"What is your policy on executive compensation?\",\n",
-    "    # \"How are ESG risks integrated into your overall risk management framework?\",\n",
-    "    # \"How do you ensure accountability at all levels within the company?\",\n",
-    "    # \"How many organizer in this project?\",\n",
-    "    # \"What does this data about?\",\n",
-    "    # \"How many node are there?\",\n",
-    "    # \"Summary all this in 100 word\",\n",
-    "    # \"Pick one file name for me\"\n",
+    "    \"Describe your factory's quantitative and qualitative targets for greenhouse gas (GHG) emission reductions. Detail the specific strategies and initiatives implemented in the past year, including investments in renewable energy, energy efficiency upgrades, or carbon offsetting programs, and report on the measured reductions achieved.\",\n",
     "]\n",
     "\n",
     "# Store responses\n",
@@ -164,7 +231,7 @@
     "# Posting each question to the endpoint\n",
     "for question in esg_questions:\n",
     "    payload = {\n",
-    "        \"thread_id\": \"1\",\n",
+    "        \"thread_id\": \"5\",\n",
     "        \"question\": question,\n",
     "        # \"prompt\": \"No matter what is asked, always answer: 'I will get back to you'\"\n",
     "    }\n",
@@ -306,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +382,20 @@
      "text": [
       "--- Testing UnstructuredLoader with: ./abc/Wanwisa Sakchaiyan__CL.pdf ---\n",
       "\n",
-      "Attempting to load from file_path with strategy='fast'...\n",
+      "Attempting to load from file_path with strategy='fast'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: pikepdf C++ to Python logger bridge initialized\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Successfully loaded from path. Number of docs: 8\n",
       "First doc (first 200 chars): Wanwisa Sakchaiyan 99, Moo 9, Nong Bua Subdistrict Ban Phaeo District, Samut Sakhon, 74120 061-519-0500 | wisa.pv@gmail.com\n",
       "------------------------------\n",
