Create question from KG but work on one files

--- a/test.ipynb
+++ b/test.ipynb
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-21 23:24:00.861648\n"
+      "2025-05-26 04:32:54.326051\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,10 +81,10 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  45.92318058013916\n",
+      "Time taken to upload files:  113.21710872650146\n",
       "Status Code: 200\n",
-      "Response Headers: {'date': 'Sat, 24 May 2025 10:01:35 GMT', 'server': 'uvicorn', 'content-length': '123', 'content-type': 'application/json'}\n",
-      "Response Text (content): {\"status\":\"Success\",\"message\":\"Files processed successfully and Question AI generation triggered.\",\"service_response\":null}\n"
+      "Response Headers: {'date': 'Mon, 26 May 2025 07:01:44 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
+      "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.\",\"original_filenames\":[\"GRI 201_  Economic Performance 2016.pdf\"],\"neo4j_service_response\":\"N/A\"}\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "url = \"http://127.0.0.1:5050/api/v1/graph/uploadfile\" # สมมติว่าคุณใช้ port 5050 ตามที่ app/main.py กำหนด\n",
     "\n",
     "files = [\n",
-    "    ('files', ('386_05 Industrials_SET ESG Metrics full_compressed.pdf', open('./pdf/386_05 Industrials_SET ESG Metrics full_compressed.pdf', 'rb'), 'application/pdf'))\n",
+    "    ('files', ('GRI 201_  Economic Performance 2016.pdf', open('./pdf/GRI 201_  Economic Performance 2016.pdf', 'rb'), 'application/pdf'))\n",
     "]\n",
     "print(\"Uploading files...\")\n",
     "start = time.time()\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +125,8 @@
      "output_type": "stream",
      "text": [
       "Uploading batch 1...\n",
-      "Time taken to upload batch:  0.0070037841796875\n",
-      "Batch upload failed with status code: 404 {\"detail\":\"Not Found\"}\n"
+      "Time taken to upload batch:  341.46818137168884\n",
+      "Batch upload successful: {'status': 'Success', 'message': 'Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.', 'original_filenames': ['386_05 Industrials_SET ESG Metrics full_compressed.pdf'], 'neo4j_service_response': 'N/A'}\n"
      ]
     }
    ],
@@ -171,47 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preparing to upload 29 files in a single request...\n",
+      "Preparing to upload 4 files in a single request...\n",
       "Prepared file: 386_05 Industrials_SET ESG Metrics full_compressed.pdf\n",
-      "Prepared file: GRI 1_ Foundation 2021.pdf\n",
-      "Prepared file: GRI 201_  Economic Performance 2016.pdf\n",
-      "Prepared file: GRI 202_ Market Presence 2016.pdf\n",
-      "Prepared file: GRI 205_ Anti-corruption 2016.pdf\n",
-      "Prepared file: GRI 206_ Anti-competitive Behavior 2016.pdf\n",
-      "Prepared file: GRI 2_ General Disclosures 2021.pdf\n",
-      "Prepared file: GRI 301_ Materials 2016.pdf\n",
-      "Prepared file: GRI 302_ Energy 2016.pdf\n",
-      "Prepared file: GRI 303_ Water and Effluents 2018.pdf\n",
-      "Prepared file: GRI 304_ Biodiversity 2016.pdf\n",
-      "Prepared file: GRI 305_ Emissions 2016.pdf\n",
-      "Prepared file: GRI 306_ Waste 2020.pdf\n",
-      "Prepared file: GRI 308_ Supplier Environmental Assessment 2016.pdf\n",
-      "Prepared file: GRI 3_ Material Topics 2021.pdf\n",
-      "Prepared file: GRI 401_ Employment 2016.pdf\n",
-      "Prepared file: GRI 403_ Occupational Health and Safety 2018.pdf\n",
-      "Prepared file: GRI 404_ Training and Education 2016.pdf\n",
-      "Prepared file: GRI 405_ Diversity and Equal Opportunity 2016.pdf\n",
-      "Prepared file: GRI 407_ Freedom of Association and Collective Bargaining 2016.pdf\n",
-      "Prepared file: GRI 408_ Child Labor 2016.pdf\n",
-      "Prepared file: GRI 413_ Local Communities 2016.pdf\n",
-      "Prepared file: GRI 416_ Customer Health and Safety 2016.pdf\n",
-      "Prepared file: GRI 418_ Customer Privacy 2016.pdf\n",
       "Prepared file: ISO-45001-2018.pdf\n",
-      "Prepared file: ISO-9001-2015.pdf\n",
       "Prepared file: iso27001.pdf\n",
-      "Prepared file: ISO_14001.pdf\n",
       "Prepared file: คู่มือการรายงานความยั่งยืนสำหรับบริษัทจดทะเบียน ตลาดหลักทรัพย์แห่งประเทศไทย.pdf\n",
       "\n",
-      "Uploading 29 files now...\n",
-      "Time taken to upload files: 707.9189 seconds\n",
-      "Upload successful (or task accepted): {'status': 'Success', 'message': 'Successfully processed 29 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.', 'original_filenames': ['386_05 Industrials_SET ESG Metrics full_compressed.pdf', 'GRI 1_ Foundation 2021.pdf', 'GRI 201_  Economic Performance 2016.pdf', 'GRI 202_ Market Presence 2016.pdf', 'GRI 205_ Anti-corruption 2016.pdf', 'GRI 206_ Anti-competitive Behavior 2016.pdf', 'GRI 2_ General Disclosures 2021.pdf', 'GRI 301_ Materials 2016.pdf', 'GRI 302_ Energy 2016.pdf', 'GRI 303_ Water and Effluents 2018.pdf', 'GRI 304_ Biodiversity 2016.pdf', 'GRI 305_ Emissions 2016.pdf', 'GRI 306_ Waste 2020.pdf', 'GRI 308_ Supplier Environmental Assessment 2016.pdf', 'GRI 3_ Material Topics 2021.pdf', 'GRI 401_ Employment 2016.pdf', 'GRI 403_ Occupational Health and Safety 2018.pdf', 'GRI 404_ Training and Education 2016.pdf', 'GRI 405_ Diversity and Equal Opportunity 2016.pdf', 'GRI 407_ Freedom of Association and Collective Bargaining 2016.pdf', 'GRI 408_ Child Labor 2016.pdf', 'GRI 413_ Local Communities 2016.pdf', 'GRI 416_ Customer Health and Safety 2016.pdf', 'GRI 418_ Customer Privacy 2016.pdf', 'ISO-45001-2018.pdf', 'ISO-9001-2015.pdf', 'iso27001.pdf', 'ISO_14001.pdf', 'คู่มือการรายงานความยั่งยืนสำหรับบริษัทจดทะเบียน ตลาดหลักทรัพย์แห่งประเทศไทย.pdf'], 'neo4j_service_response': 'N/A'}\n",
+      "Uploading 4 files now...\n",
+      "Time taken to upload files: 1256.8402 seconds\n",
+      "Upload failed with status code: 500\n",
+      "Error response: {'error': 'Error processing files for Knowledge Graph: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\\n}\\n, links {\\n  description: \"Learn more about Gemini API quotas\"\\n  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\\n}\\n, retry_delay {\\n  seconds: 31\\n}\\n]'}\n",
       "Closing all file objects...\n"
      ]
     }
