--- a/test.ipynb
+++ b/test.ipynb
@@ -73,6 +73,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'igraph'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01migraph\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(igraph\u001b[38;5;241m.\u001b[39m__version__)\n\u001b[0;32m      3\u001b[0m exit()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'igraph'"
+     ]
+    }
+   ],
+   "source": [
+    "import igraph\n",
+    "print(igraph.__version__)\n",
+    "exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -81,9 +104,9 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  132.01007604599\n",
+      "Time taken to upload files:  153.69822788238525\n",
       "Status Code: 200\n",
-      "Response Headers: {'date': 'Wed, 28 May 2025 21:42:28 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
+      "Response Headers: {'date': 'Thu, 29 May 2025 09:04:26 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
       "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.\",\"original_filenames\":[\"GRI 201_  Economic Performance 2016.pdf\"],\"neo4j_service_response\":\"N/A\"}\n"
      ]
     }
