Sub graph communities work

--- a/test.ipynb
+++ b/test.ipynb
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-28 23:22:45.781144\n"
+      "2025-05-30 23:17:35.452579\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -104,9 +104,9 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  153.69822788238525\n",
+      "Time taken to upload files:  153.25965762138367\n",
       "Status Code: 200\n",
-      "Response Headers: {'date': 'Thu, 29 May 2025 09:04:26 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
+      "Response Headers: {'date': 'Sat, 31 May 2025 19:44:18 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
       "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.\",\"original_filenames\":[\"GRI 201_  Economic Performance 2016.pdf\"],\"neo4j_service_response\":\"N/A\"}\n"
      ]
     }
@@ -140,16 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploading batch 1...\n",
-      "Time taken to upload batch:  341.46818137168884\n",
-      "Batch upload successful: {'status': 'Success', 'message': 'Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.', 'original_filenames': ['386_05 Industrials_SET ESG Metrics full_compressed.pdf'], 'neo4j_service_response': 'N/A'}\n"
+      "Uploading batch 1...\n"
      ]
     }
    ],
@@ -194,23 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preparing to upload 4 files in a single request...\n",
-      "Prepared file: 386_05 Industrials_SET ESG Metrics full_compressed.pdf\n",
+      "Preparing to upload 2 files in a single request...\n",
+      "Prepared file: GRI 201_  Economic Performance 2016.pdf\n",
       "Prepared file: ISO-45001-2018.pdf\n",
-      "Prepared file: iso27001.pdf\n",
-      "Prepared file: คู่มือการรายงานความยั่งยืนสำหรับบริษัทจดทะเบียน ตลาดหลักทรัพย์แห่งประเทศไทย.pdf\n",
       "\n",
-      "Uploading 4 files now...\n",
-      "Time taken to upload files: 1256.8402 seconds\n",
-      "Upload failed with status code: 500\n",
-      "Error response: {'error': 'Error processing files for Knowledge Graph: 429 You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. [violations {\\n}\\n, links {\\n  description: \"Learn more about Gemini API quotas\"\\n  url: \"https://ai.google.dev/gemini-api/docs/rate-limits\"\\n}\\n, retry_delay {\\n  seconds: 31\\n}\\n]'}\n",
+      "Uploading 2 files now...\n",
+      "Time taken to upload files: 271.7089 seconds\n",
+      "Upload successful (or task accepted): {'status': 'Success', 'message': 'Successfully processed 2 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.', 'original_filenames': ['GRI 201_  Economic Performance 2016.pdf', 'ISO-45001-2018.pdf'], 'neo4j_service_response': 'N/A'}\n",
       "Closing all file objects...\n"
      ]
     }
