--- a/test.ipynb
+++ b/test.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,9 +104,9 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  142.0486524105072\n",
+      "Time taken to upload files:  117.22095441818237\n",
       "Status Code: 200\n",
-      "Response Headers: {'date': 'Sun, 01 Jun 2025 17:12:28 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
+      "Response Headers: {'date': 'Sun, 01 Jun 2025 19:42:26 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
       "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.\",\"original_filenames\":[\"GRI 201_  Economic Performance 2016.pdf\"],\"neo4j_service_response\":\"N/A\"}\n"
      ]
     }
@@ -192,20 +192,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preparing to upload 2 files in a single request...\n",
+      "Preparing to upload 25 files in a single request...\n",
+      "Prepared file: GRI 1_ Foundation 2021.pdf\n",
       "Prepared file: GRI 201_  Economic Performance 2016.pdf\n",
+      "Prepared file: GRI 202_ Market Presence 2016.pdf\n",
+      "Prepared file: GRI 205_ Anti-corruption 2016.pdf\n",
+      "Prepared file: GRI 2_ General Disclosures 2021.pdf\n",
+      "Prepared file: GRI 301_ Materials 2016.pdf\n",
+      "Prepared file: GRI 302_ Energy 2016.pdf\n",
+      "Prepared file: GRI 303_ Water and Effluents 2018.pdf\n",
+      "Prepared file: GRI 304_ Biodiversity 2016.pdf\n",
+      "Prepared file: GRI 305_ Emissions 2016.pdf\n",
+      "Prepared file: GRI 306_ Waste 2020.pdf\n",
+      "Prepared file: GRI 308_ Supplier Environmental Assessment 2016.pdf\n",
+      "Prepared file: GRI 3_ Material Topics 2021.pdf\n",
+      "Prepared file: GRI 401_ Employment 2016.pdf\n",
+      "Prepared file: GRI 403_ Occupational Health and Safety 2018.pdf\n",
+      "Prepared file: GRI 404_ Training and Education 2016.pdf\n",
+      "Prepared file: GRI 405_ Diversity and Equal Opportunity 2016.pdf\n",
+      "Prepared file: GRI 408_ Child Labor 2016.pdf\n",
+      "Prepared file: GRI 413_ Local Communities 2016.pdf\n",
+      "Prepared file: GRI 416_ Customer Health and Safety 2016.pdf\n",
+      "Prepared file: GRI 418_ Customer Privacy 2016.pdf\n",
       "Prepared file: ISO-45001-2018.pdf\n",
+      "Prepared file: ISO-9001-2015.pdf\n",
+      "Prepared file: iso27001.pdf\n",
+      "Prepared file: ISO_14001.pdf\n",
       "\n",
-      "Uploading 2 files now...\n",
-      "Time taken to upload files: 296.1370 seconds\n",
-      "Upload successful (or task accepted): {'status': 'Success', 'message': 'Successfully processed 2 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.', 'original_filenames': ['GRI 201_  Economic Performance 2016.pdf', 'ISO-45001-2018.pdf'], 'neo4j_service_response': 'N/A'}\n",
+      "Uploading 25 files now...\n",
+      "Time taken to upload files: 3567.3637 seconds\n",
+      "Upload successful (or task accepted): {'status': 'Success', 'message': 'Successfully processed 25 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.', 'original_filenames': ['GRI 1_ Foundation 2021.pdf', 'GRI 201_  Economic Performance 2016.pdf', 'GRI 202_ Market Presence 2016.pdf', 'GRI 205_ Anti-corruption 2016.pdf', 'GRI 2_ General Disclosures 2021.pdf', 'GRI 301_ Materials 2016.pdf', 'GRI 302_ Energy 2016.pdf', 'GRI 303_ Water and Effluents 2018.pdf', 'GRI 304_ Biodiversity 2016.pdf', 'GRI 305_ Emissions 2016.pdf', 'GRI 306_ Waste 2020.pdf', 'GRI 308_ Supplier Environmental Assessment 2016.pdf', 'GRI 3_ Material Topics 2021.pdf', 'GRI 401_ Employment 2016.pdf', 'GRI 403_ Occupational Health and Safety 2018.pdf', 'GRI 404_ Training and Education 2016.pdf', 'GRI 405_ Diversity and Equal Opportunity 2016.pdf', 'GRI 408_ Child Labor 2016.pdf', 'GRI 413_ Local Communities 2016.pdf', 'GRI 416_ Customer Health and Safety 2016.pdf', 'GRI 418_ Customer Privacy 2016.pdf', 'ISO-45001-2018.pdf', 'ISO-9001-2015.pdf', 'iso27001.pdf', 'ISO_14001.pdf'], 'neo4j_service_response': 'N/A'}\n",
       "Closing all file objects...\n"
      ]
     }
