--- a/test.ipynb
+++ b/test.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -230,9 +230,9 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  124.80990505218506\n",
+      "Time taken to upload files:  125.60201597213745\n",
       "Status Code: 200\n",
-      "Response Headers: {'date': 'Sat, 07 Jun 2025 13:52:11 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
+      "Response Headers: {'date': 'Sun, 08 Jun 2025 11:55:45 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
       "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.\",\"original_filenames\":[\"GRI 201_  Economic Performance 2016.pdf\"],\"neo4j_service_response\":\"N/A\"}\n"
      ]
     }
@@ -646,14 +646,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [{'content': 'ฉันจะสามารถรายงานการลดขยะได้อย่างไรบ้าง?', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': 'ab8c5307-cc35-42c3-8f05-1bea8a85efe1', 'example': False}, {'content': 'You can report waste reduction using GRI 306: Waste 2020. The reporting should include plans for managing and reducing waste, the amount of waste generated, the amount of waste reused or recycled, and the methods for waste disposal. You can notify GRI of the use of the GRI Standards by sending an email to reportregistration@globalreporting.org.', 'additional_kwargs': {}, 'response_metadata': {'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, 'type': 'ai', 'name': None, 'id': 'run--bceba2be-6cce-4bc8-b5e4-93688a9d80d1-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 27048, 'output_tokens': 79, 'total_tokens': 27127, 'input_token_details': {'cache_read': 0}}}]}\n"
+      "{'messages': [{'content': 'ความยั่งยืนคืออะไร?', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': '742d536d-3c80-459c-94f6-a05362b0a87b', 'example': False}, {'content': '            Development that meets the needs of the present without compromising the ability of future generations to meet their own needs.', 'additional_kwargs': {}, 'response_metadata': {'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, 'type': 'ai', 'name': None, 'id': 'run--81566cec-f4d3-427f-802d-10d3c3bc881c-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 139458, 'output_tokens': 23, 'total_tokens': 139481, 'input_token_details': {'cache_read': 0}}}]}\n"
      ]
     }
    ],
@@ -665,7 +665,7 @@
     "\n",
     "# List of ESG questions\n",
     "esg_questions = [\n",
-    "    \"ฉันจะสามารถรายงานการลดขยะได้อย่างไรบ้าง?\"\n",
+    "    \"ความยั่งยืนคืออะไร?\"\n",
     "]\n",
     "\n",
     "# Store responses\n",
@@ -674,7 +674,7 @@
     "# Posting each question to the endpoint\n",
     "for question in esg_questions:\n",
     "    payload = {\n",
-    "        \"thread_id\": \"7003\",\n",
+    "        \"thread_id\": \"7005\",\n",
     "        \"question\": question,\n",
     "        # \"prompt\": \"No matter what is asked, always answer: 'I will get back to you'\"\n",
     "    }\n",
