--- a/test.ipynb
+++ b/test.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +230,10 @@
      "output_type": "stream",
      "text": [
       "Uploading files...\n",
-      "Time taken to upload files:  148.85987496376038\n",
-      "Status Code: 200\n",
-      "Response Headers: {'date': 'Sun, 08 Jun 2025 12:34:55 GMT', 'server': 'uvicorn', 'content-length': '260', 'content-type': 'application/json'}\n",
-      "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files for Knowledge Graph ingestion. Question AI baseline generation has been triggered in the background.\",\"original_filenames\":[\"GRI 201_  Economic Performance 2016.pdf\"],\"neo4j_service_response\":\"N/A\"}\n"
+      "Time taken to upload files:  96.16320276260376\n",
+      "Status Code: 202\n",
+      "Response Headers: {'date': 'Sun, 08 Jun 2025 17:59:15 GMT', 'server': 'uvicorn', 'content-length': '186', 'content-type': 'application/json'}\n",
+      "Response Text (content): {\"status\":\"Success\",\"message\":\"Successfully processed 1 files. Question AI evolution (Auto-Detected Baseline=True) triggered.\",\"original_filenames\":[\"GRI 202_ Market Presence 2016.pdf\"]}\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
     "url = \"http://127.0.0.1:5050/api/v1/graph/uploadfile\" # สมมติว่าคุณใช้ port 5050 ตามที่ app/main.py กำหนด\n",
     "\n",
     "files = [\n",
-    "    ('files', ('GRI 201_  Economic Performance 2016.pdf', open('./pdf/GRI 201_  Economic Performance 2016.pdf', 'rb'), 'application/pdf'))\n",
+    "    ('files', ('GRI 202_ Market Presence 2016.pdf', open('./pdf/GRI 202_ Market Presence 2016.pdf', 'rb'), 'application/pdf'))\n",
     "]\n",
     "print(\"Uploading files...\")\n",
     "start = time.time()\n",
